src/objects/EventApi__Lightning_Event_Page_Template_Component__mdt.object
<CustomObject>
    <description>Mapping of Lightning Event Component to Lightning Event Page Template.</description>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, this record will become enabled as a template.</description>
        <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated - please use Is_Active__c</description>
        <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
        <label>Is Enabled (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Lightning_Event_Component__c</fullName>
        <description>** REQUIRED ** Linked to the related event component.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related event component.</inlineHelpText>
        <label>Lightning Event Component</label>
        <referenceTo>EventApi__Lightning_Event_Component__mdt</referenceTo>
        <relationshipLabel>Lightning Event Page Template Components</relationshipLabel>
        <relationshipName>Lightning_Event_Page_Template_Components</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>EventApi__Lightning_Event_Page_Template__c</fullName>
        <description>** REQUIRED ** Linked to the related event page.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related event page.</inlineHelpText>
        <label>Lightning Event Page Template</label>
        <referenceTo>EventApi__Lightning_Event_Page_Template__mdt</referenceTo>
        <relationshipLabel>Lightning Event Page Template Components</relationshipLabel>
        <relationshipName>Lightning_Event_Page_Template_Components</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>EventApi__Order__c</fullName>
        <description>** REQUIRED ** Display order of Lightning components on a page.</description>
        <inlineHelpText>** REQUIRED ** Display order of Lightning components on a page.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lightning Event Page Template Component</label>
    <pluralLabel>Lightning Event Page Template Components</pluralLabel>
</CustomObject>